--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,8 @@ dependencies {
     //chart
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    //semi circular progress bar
+    implementation 'com.shimaami.android:progressview:1.0.1'
+    implementation 'com.github.yinhaide:HDSemicircle:0.0.1'
 }
